[gd_scene load_steps=5 format=2]

[ext_resource path="res://bullets/Bullet1.gd" type="Script" id=1]
[ext_resource path="res://art/bullets/01.png" type="Texture" id=2]
[ext_resource path="res://art/sounds/laser-gun-19sf.mp3" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]
radius = 5.0
height = 16.0

[node name="Bullet1" type="Area2D" groups=["bullets"]]
z_index = 99
z_as_relative = false
collision_mask = 0
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="BulletSprite" type="Sprite" parent="."]
z_as_relative = false
texture = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = 1.5708
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]

[node name="LaserSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[connection signal="area_entered" from="." to="." method="_on_Bullet1_area_entered"]
[connection signal="body_entered" from="." to="." method="_on_Bullet1_body_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
